--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "5.2.1",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
@@ -22,6 +23,7 @@
     "@fortawesome/fontawesome-free": "5.9.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "4.3.1",
+    "firebase": "6.3.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
